# llm-prompt-scaffold

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_prompt_scaffold/: __init__.py  core.py
tests/: test_llm_prompt_scaffold.py
